--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 <body>
     <header>
         <div class="container">
+            <p>botones</p>
             <h1>Portafolio Virtual</h1>
-            <p>Presentacion</p>
         </div>
     </header>
 
     <div class="container">
         <div class="content">
             <p>Este es el contenido principal de la página. Puedes agregar párrafos, imágenes, tablas, y más aquí.</p>
+            <p>Presentaciones yo que poronga se</p>
         </div>
     </div>
 </body>
