--- a/index.html
+++ b/index.html
@@ -9,17 +9,26 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container-fotoperfil">
             <p>botones</p>
             <h1>Portafolio Virtual</h1>
         </div>
     </header>
-
-    <div class="container">
-        <div class="content">
-            <p>Este es el contenido principal de la página. Puedes agregar párrafos, imágenes, tablas, y más aquí.</p>
-            <p>Presentaciones yo que poronga se</p>
+    <main>
+        <div class="container">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem suscipit delectus qui rerum quam magnam earum at ad minus voluptatum consectetur praesentium nulla ipsa, beatae quo odio modi dolores quisquam.</p>
+            </div>
         </div>
-    </div>
+        <div>
+            <div class="sidebar">
+                <div class="caja1"> COSA ARRIBA DISTINTA </div>
+                <div class="caja"> CAJA 2 </div>
+                <div class="caja"> CAJA 3 </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        footerboludo
+    </footer>
 </body>
 </html>
