--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         <div>
             <div class="sidebar">
                 <div class="caja1"> COSA ARRIBA DISTINTA </div>
-                <div class="caja"> CAJA 2 </div>
-                <div class="caja"> CAJA 3 </div>
+                <div class="caja-cajon"> 
+                    <div class="caja"> CAJA 2 </div>
+                    <div class="caja"> CAJA 3 </div>
+                 </div>
             </div>
         </div>
     </main>
