--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem suscipit delectus qui rerum quam magnam earum at ad minus voluptatum consectetur praesentium nulla ipsa, beatae quo odio modi dolores quisquam.</p>
             </div>
         </div>
-        <div>
             <div class="sidebar">
                 <div class="caja1"> COSA ARRIBA DISTINTA </div>
                 <div class="caja-cajon"> 
-                    <div class="caja"> CAJA 2 </div>
-                    <div class="caja"> CAJA 3 </div>
+                    <div class="logros"> CAJA 2 </div>
+                    <div class="presentacion"> CAJA 3 </div>
                  </div>
-            </div>
         </div>
     </main>
     <footer>
