--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>PortFolioPrietoAgustinIvan</title>
 
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mingzat&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -22,8 +25,8 @@
             <div class="sidebar">
                 <div class="caja1"> COSA ARRIBA DISTINTA </div>
                 <div class="caja-cajon"> 
-                    <div class="logros"> CAJA 2 </div>
-                    <div class="presentacion"> CAJA 3 </div>
+                    <div class="logros"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam, commodi. Itaque fuga facilis cumque molestiae minima ab libero adipisci voluptatibus exercitationem eos eius dignissimos, consequatur quidem eveniet mollitia non quisquam! </div>
+                    <div class="presentacion"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ipsum reprehenderit dolore provident tempora at blanditiis molestiae commodi! In nihil inventore fugit minima! Delectus maxime suscipit reiciendis, fugiat commodi officia. </div>
                  </div>
         </div>
     </main>
